--- a/templates/base.html
+++ b/templates/base.html
@@ -21,13 +21,14 @@
     {% block extra_css %}
     {% endblock %}
 
+    <script src="https://unpkg.com/htmx.org@1.8.0" integrity="sha384-cZuAZ+ZbwkNRnrKi05G/fjBX+azI9DNOkNYysZ0I/X5ZFgsmMiBXgDZof30F5ofc" crossorigin="anonymous"></script>
 
 
     <title>Electric Dreams</title>
 
 </head>
 
-<body>
+<body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
     {% include "includes/navbar.html" %}
     <h1>Hello, world!</h1>
     {% if messages %}
@@ -47,8 +48,10 @@
         {% endfor %}
     </div>
     {% endif %}
+
     {% block content %}
     {% endblock %}
+
     {% include "includes/footer.html" %}
     <script src="https://kit.fontawesome.com/42d1be6a3c.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
